[package]
name = "simple-liquidity-pool"
version = "0.1.0"
description = "Liquidity Pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_liquidity_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
